refactored codebase to reflect updates

--- a/MoNA_raw_exploration.ipynb
+++ b/MoNA_raw_exploration.ipynb
@@ -8,13 +8,10 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import subprocess\n",
-    "import json\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "#from MoNA_reader import process_json_file\n",
-    "from MoNA_reader_test import *#process_json_file as process_json_file_test, read_line"
+    "from MoNA_reader import *"
    ]
   },
   {
@@ -24,7 +21,8 @@
    "outputs": [],
    "source": [
     "json_pth = \"data/MoNA/MoNA-export-In-Silico_Spectra-json/\"\n",
-    "json_name = \"MoNA-export-In-Silico_Spectra.json\""
+    "json_name = \"MoNA-export-In-Silico_Spectra.json\"\n",
+    "csv_pth = \"data/MoNA/experimental.csv\""
    ]
   },
   {
@@ -62,242 +60,6 @@
     "    subprocess.run([\"echo\", \"]\", \">>\", json_pth+json_part])\n",
     "    print(3)\n",
     "    '''"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "line = json.loads(read_line(json_pth, 5))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'kind': 'biological',\n",
-       " 'tags': [],\n",
-       " 'inchi': 'InChI=1S/C8H18O3Si/c1-7(6-8(9)10-2)11-12(3,4)5/h7H,6H2,1-5H3',\n",
-       " 'names': [{'computed': False,\n",
-       "   'name': 'Methyl 3-hydroxybutyrate, TMS derivative',\n",
-       "   'score': 0.0},\n",
-       "  {'computed': False,\n",
-       "   'name': 'Butanoic acid, 3-[(trimethylsilyl)oxy]-, methyl ester',\n",
-       "   'score': 0.0},\n",
-       "  {'computed': False,\n",
-       "   'name': 'Methyl 3-[(trimethylsilyl)oxy]butanoate  #',\n",
-       "   'score': 0.0}],\n",
-       " 'molFile': '\\n  CDK     01292305092D\\n\\n 12 11  0  0  0  0  0  0  0  0999 V2000\\n   -3.0099    2.7623    0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0\\n    2.1863    4.2623    0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0\\n   -6.3579    5.5613    0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0\\n   -6.9070    3.5123    0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0\\n   -4.8579    2.9632    0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0\\n   -1.7108    5.0123    0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0\\n   -3.0099    4.2623    0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0\\n   -0.4118    4.2623    0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0\\n   -0.4118    2.7623    0.0000 O   0  0  0  0  0  0  0  0  0  0  0  0\\n    0.8873    5.0123    0.0000 O   0  0  0  0  0  0  0  0  0  0  0  0\\n   -4.3089    5.0123    0.0000 O   0  0  0  0  0  0  0  0  0  0  0  0\\n   -5.6079    4.2623    0.0000 Si  0  0  0  0  0  0  0  0  0  0  0  0\\n  7  1  1  0  0  0  0\\n  7  6  1  0  0  0  0\\n  8  6  1  0  0  0  0\\n  9  8  2  0  0  0  0\\n 10  2  1  0  0  0  0\\n 10  8  1  0  0  0  0\\n 11  7  1  0  0  0  0\\n 12  3  1  0  0  0  0\\n 12  4  1  0  0  0  0\\n 12  5  1  0  0  0  0\\n 12 11  1  0  0  0  0\\nM  END\\n',\n",
-       " 'computed': False,\n",
-       " 'inchiKey': 'FHDCVPMIQWHEAE-UHFFFAOYSA-N',\n",
-       " 'metaData': [{'name': 'InChI',\n",
-       "   'value': 'InChI=1S/C8H18O3Si/c1-7(6-8(9)10-2)11-12(3,4)5/h7H,6H2,1-5H3',\n",
-       "   'hidden': False,\n",
-       "   'category': 'none',\n",
-       "   'computed': False},\n",
-       "  {'name': 'InChIKey',\n",
-       "   'value': 'FHDCVPMIQWHEAE-UHFFFAOYSA-N',\n",
-       "   'hidden': False,\n",
-       "   'category': 'none',\n",
-       "   'computed': False},\n",
-       "  {'name': 'molecular formula',\n",
-       "   'value': 'C8H18O3Si',\n",
-       "   'hidden': False,\n",
-       "   'category': 'computed',\n",
-       "   'computed': True},\n",
-       "  {'name': 'total exact mass',\n",
-       "   'value': '190.102520966',\n",
-       "   'hidden': False,\n",
-       "   'category': 'computed',\n",
-       "   'computed': True},\n",
-       "  {'name': 'SMILES',\n",
-       "   'value': 'O=C(OC)CC(O[Si](C)(C)C)C',\n",
-       "   'hidden': False,\n",
-       "   'category': 'computed',\n",
-       "   'computed': True},\n",
-       "  {'name': '[2M+H-H2O]+',\n",
-       "   'value': '363.197671932',\n",
-       "   'hidden': True,\n",
-       "   'category': 'theoretical adduct',\n",
-       "   'computed': True},\n",
-       "  {'name': '[2M+K]+',\n",
-       "   'value': '419.30334193199997',\n",
-       "   'hidden': True,\n",
-       "   'category': 'theoretical adduct',\n",
-       "   'computed': True},\n",
-       "  {'name': '[M+H]+',\n",
-       "   'value': '191.110490966',\n",
-       "   'hidden': True,\n",
-       "   'category': 'theoretical adduct',\n",
-       "   'computed': True},\n",
-       "  {'name': '[2M+Na]+',\n",
-       "   'value': '403.194811932',\n",
-       "   'hidden': True,\n",
-       "   'category': 'theoretical adduct',\n",
-       "   'computed': True},\n",
-       "  {'name': '[2M+Cl]-',\n",
-       "   'value': '415.65804193199995',\n",
-       "   'hidden': True,\n",
-       "   'category': 'theoretical adduct',\n",
-       "   'computed': True},\n",
-       "  {'name': '[2M+HAc-H]-',\n",
-       "   'value': '439.249071932',\n",
-       "   'hidden': True,\n",
-       "   'category': 'theoretical adduct',\n",
-       "   'computed': True},\n",
-       "  {'name': '[M-H20-H]-',\n",
-       "   'value': '171.08413096599998',\n",
-       "   'hidden': True,\n",
-       "   'category': 'theoretical adduct',\n",
-       "   'computed': True},\n",
-       "  {'name': '[M-H]-',\n",
-       "   'value': '189.095244966',\n",
-       "   'hidden': True,\n",
-       "   'category': 'theoretical adduct',\n",
-       "   'computed': True},\n",
-       "  {'name': '[2M-H]-',\n",
-       "   'value': '379.197765932',\n",
-       "   'hidden': True,\n",
-       "   'category': 'theoretical adduct',\n",
-       "   'computed': True},\n",
-       "  {'name': '[M+Na]+',\n",
-       "   'value': '213.09229096599998',\n",
-       "   'hidden': True,\n",
-       "   'category': 'theoretical adduct',\n",
-       "   'computed': True},\n",
-       "  {'name': '[M+H-H2O]+',\n",
-       "   'value': '173.09515096599998',\n",
-       "   'hidden': True,\n",
-       "   'category': 'theoretical adduct',\n",
-       "   'computed': True},\n",
-       "  {'name': '[2M+NH4]+',\n",
-       "   'value': '398.243621932',\n",
-       "   'hidden': True,\n",
-       "   'category': 'theoretical adduct',\n",
-       "   'computed': True},\n",
-       "  {'name': '[M+Cl]-',\n",
-       "   'value': '225.555520966',\n",
-       "   'hidden': True,\n",
-       "   'category': 'theoretical adduct',\n",
-       "   'computed': True},\n",
-       "  {'name': '[M+NH4]+',\n",
-       "   'value': '208.14110096599998',\n",
-       "   'hidden': True,\n",
-       "   'category': 'theoretical adduct',\n",
-       "   'computed': True},\n",
-       "  {'name': '[M+K]+',\n",
-       "   'value': '229.20082096599998',\n",
-       "   'hidden': True,\n",
-       "   'category': 'theoretical adduct',\n",
-       "   'computed': True},\n",
-       "  {'name': '[2M+H]+',\n",
-       "   'value': '381.213011932',\n",
-       "   'hidden': True,\n",
-       "   'category': 'theoretical adduct',\n",
-       "   'computed': True},\n",
-       "  {'name': '[M+HAc-H]-',\n",
-       "   'value': '249.14655096599998',\n",
-       "   'hidden': True,\n",
-       "   'category': 'theoretical adduct',\n",
-       "   'computed': True}],\n",
-       " 'classification': [{'name': 'kingdom',\n",
-       "   'value': 'Organic compounds',\n",
-       "   'hidden': False,\n",
-       "   'category': 'classification',\n",
-       "   'computed': True},\n",
-       "  {'name': 'superclass',\n",
-       "   'value': 'Lipids and lipid-like molecules',\n",
-       "   'hidden': False,\n",
-       "   'category': 'classification',\n",
-       "   'computed': True},\n",
-       "  {'name': 'class',\n",
-       "   'value': 'Fatty Acyls',\n",
-       "   'hidden': False,\n",
-       "   'category': 'classification',\n",
-       "   'computed': True},\n",
-       "  {'name': 'subclass',\n",
-       "   'value': 'Fatty acid esters',\n",
-       "   'hidden': False,\n",
-       "   'category': 'classification',\n",
-       "   'computed': True},\n",
-       "  {'name': 'direct parent',\n",
-       "   'value': 'Fatty acid methyl esters',\n",
-       "   'hidden': False,\n",
-       "   'category': 'classification',\n",
-       "   'computed': True},\n",
-       "  {'name': 'alternative parent',\n",
-       "   'value': 'Trialkylheterosilanes',\n",
-       "   'hidden': False,\n",
-       "   'category': 'classification',\n",
-       "   'computed': True},\n",
-       "  {'name': 'alternative parent',\n",
-       "   'value': 'Methyl esters',\n",
-       "   'hidden': False,\n",
-       "   'category': 'classification',\n",
-       "   'computed': True},\n",
-       "  {'name': 'alternative parent',\n",
-       "   'value': 'Silyl ethers',\n",
-       "   'hidden': False,\n",
-       "   'category': 'classification',\n",
-       "   'computed': True},\n",
-       "  {'name': 'alternative parent',\n",
-       "   'value': 'Organic metalloid salts',\n",
-       "   'hidden': False,\n",
-       "   'category': 'classification',\n",
-       "   'computed': True},\n",
-       "  {'name': 'alternative parent',\n",
-       "   'value': 'Monocarboxylic acids and derivatives',\n",
-       "   'hidden': False,\n",
-       "   'category': 'classification',\n",
-       "   'computed': True},\n",
-       "  {'name': 'alternative parent',\n",
-       "   'value': 'Organic oxides',\n",
-       "   'hidden': False,\n",
-       "   'category': 'classification',\n",
-       "   'computed': True},\n",
-       "  {'name': 'alternative parent',\n",
-       "   'value': 'Hydrocarbon derivatives',\n",
-       "   'hidden': False,\n",
-       "   'category': 'classification',\n",
-       "   'computed': True},\n",
-       "  {'name': 'alternative parent',\n",
-       "   'value': 'Carbonyl compounds',\n",
-       "   'hidden': False,\n",
-       "   'category': 'classification',\n",
-       "   'computed': True}]}"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "line['compound'][0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Lines in file: 5\n",
-      "Total items processed: 3\n"
-     ]
-    }
-   ],
-   "source": [
-    "process_json_file(file_path=json_pth, output_csv=csv_pth, total_lines=5)"
    ]
   },
   {
