--- a/ms_tokenizer_comparison.ipynb
+++ b/ms_tokenizer_comparison.ipynb
@@ -7,20 +7,15 @@
    "outputs": [],
    "source": [
     "import torch\n",
-    "import torch.nn as nn\n",
-    "import torch.nn.functional as F\n",
     "from torch import optim, nn\n",
-    "from torch.utils.data import TensorDataset, DataLoader, Dataset\n",
-    "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import LabelEncoder\n",
-    "import numpy as np\n",
     "import pandas as pd\n",
-    "import math\n",
-    "import ast\n",
-    "from scipy.signal import find_peaks\n",
-    "import pywt\n",
     "import matplotlib.pyplot as plt\n",
-    "from tqdm.notebook import tqdm"
+    "\n",
+    "from transformer.ms_data_funcs import calculate_max_mz, get_sample_spectrum\n",
+    "from transformer.tokenizers import visualize_tokenization, tokenize_spectrum\n",
+    "from transformer.classifier import MS_VIT, train_model\n",
+    "from transformer.transformer_utils import load_tokenized_data"
    ]
   },
   {
@@ -108,164 +103,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def direct_tokenization(binned_spectrum, window_size=16):\n",
-    "    # Pad the spectrum if necessary\n",
-    "    if len(binned_spectrum) % window_size != 0:\n",
-    "        pad_length = window_size - (len(binned_spectrum) % window_size)\n",
-    "        binned_spectrum = np.pad(binned_spectrum, (0, pad_length), mode='constant')\n",
-    "    \n",
-    "    # Reshape into 2D\n",
-    "    return binned_spectrum.reshape(-1, window_size)\n",
-    "\n",
-    "def fourier_tokenization_2d(binned_spectrum, window_size=16):\n",
-    "    fft = np.fft.fft(binned_spectrum)\n",
-    "    magnitude_spectrum = np.abs(fft[:len(fft)//2])\n",
-    "    \n",
-    "    # Pad if necessary\n",
-    "    if len(magnitude_spectrum) % window_size != 0:\n",
-    "        pad_length = window_size - (len(magnitude_spectrum) % window_size)\n",
-    "        magnitude_spectrum = np.pad(magnitude_spectrum, (0, pad_length), mode='constant')\n",
-    "    \n",
-    "    # Reshape into 2D\n",
-    "    return magnitude_spectrum.reshape(-1, window_size)\n",
-    "\n",
-    "def wavelet_tokenization_2d(binned_spectrum, window_size=16, wavelet='db1'):\n",
-    "    coeffs = pywt.wavedec(binned_spectrum, wavelet)\n",
-    "    flat_coeffs = np.concatenate(coeffs)\n",
-    "    \n",
-    "    # Pad if necessary\n",
-    "    if len(flat_coeffs) % window_size != 0:\n",
-    "        pad_length = window_size - (len(flat_coeffs) % window_size)\n",
-    "        flat_coeffs = np.pad(flat_coeffs, (0, pad_length), mode='constant')\n",
-    "    \n",
-    "    # Reshape into 2D\n",
-    "    return flat_coeffs.reshape(-1, window_size)\n",
-    "\n",
-    "def peak_tokenization(spectrum_string, top_n=50, pad_to=50):\n",
-    "    spectrum = ast.literal_eval(spectrum_string)\n",
-    "    spectrum.sort(key=lambda x: x[1], reverse=True)\n",
-    "    top_peaks = spectrum[:top_n]\n",
-    "    flattened = [val for peak in top_peaks for val in peak]\n",
-    "    \n",
-    "    # Pad if necessary\n",
-    "    if len(flattened) < pad_to * 2:\n",
-    "        flattened.extend([0] * (pad_to * 2 - len(flattened)))\n",
-    "    \n",
-    "    return np.array(flattened).reshape(-1, 2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"\\ndef fourier_tokenization_2d(binned_spectrum, window_size=16):\\n    # Perform FFT\\n    fft = np.fft.fft(binned_spectrum)\\n    magnitude_spectrum = np.abs(fft[:len(fft)//2])\\n    \\n    # Pad the spectrum if necessary\\n    if len(magnitude_spectrum) % (window_size * window_size) != 0:\\n        pad_length = window_size * window_size * (len(magnitude_spectrum) // (window_size * window_size) + 1) - len(magnitude_spectrum)\\n        magnitude_spectrum = np.pad(magnitude_spectrum, (0, pad_length), mode='constant')\\n    \\n    # Reshape into 2D\\n    num_windows = len(magnitude_spectrum) // (window_size * window_size)\\n    reshaped = magnitude_spectrum.reshape(num_windows, window_size, window_size)\\n    \\n    # Flatten each window\\n    return reshaped.reshape(num_windows, -1).tolist()\\n\\ndef wavelet_tokenization_2d(binned_spectrum, window_size=16, wavelet='db1'):\\n    # Perform wavelet transform\\n    coeffs = pywt.wavedec(binned_spectrum, wavelet)\\n    \\n    # Concatenate all levels\\n    flat_coeffs = np.concatenate(coeffs)\\n    \\n    # Pad if necessary\\n    if len(flat_coeffs) % (window_size * window_size) != 0:\\n        pad_length = window_size * window_size * (len(flat_coeffs) // (window_size * window_size) + 1) - len(flat_coeffs)\\n        flat_coeffs = np.pad(flat_coeffs, (0, pad_length), mode='constant')\\n    \\n    # Reshape into 2D\\n    num_windows = len(flat_coeffs) // (window_size * window_size)\\n    reshaped = flat_coeffs.reshape(num_windows, window_size, window_size)\\n    \\n    # Flatten each window\\n    return reshaped.reshape(num_windows, -1).tolist()\\n\""
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "'''\n",
-    "def fourier_tokenization_2d(binned_spectrum, window_size=16):\n",
-    "    # Perform FFT\n",
-    "    fft = np.fft.fft(binned_spectrum)\n",
-    "    magnitude_spectrum = np.abs(fft[:len(fft)//2])\n",
-    "    \n",
-    "    # Pad the spectrum if necessary\n",
-    "    if len(magnitude_spectrum) % (window_size * window_size) != 0:\n",
-    "        pad_length = window_size * window_size * (len(magnitude_spectrum) // (window_size * window_size) + 1) - len(magnitude_spectrum)\n",
-    "        magnitude_spectrum = np.pad(magnitude_spectrum, (0, pad_length), mode='constant')\n",
-    "    \n",
-    "    # Reshape into 2D\n",
-    "    num_windows = len(magnitude_spectrum) // (window_size * window_size)\n",
-    "    reshaped = magnitude_spectrum.reshape(num_windows, window_size, window_size)\n",
-    "    \n",
-    "    # Flatten each window\n",
-    "    return reshaped.reshape(num_windows, -1).tolist()\n",
-    "\n",
-    "def wavelet_tokenization_2d(binned_spectrum, window_size=16, wavelet='db1'):\n",
-    "    # Perform wavelet transform\n",
-    "    coeffs = pywt.wavedec(binned_spectrum, wavelet)\n",
-    "    \n",
-    "    # Concatenate all levels\n",
-    "    flat_coeffs = np.concatenate(coeffs)\n",
-    "    \n",
-    "    # Pad if necessary\n",
-    "    if len(flat_coeffs) % (window_size * window_size) != 0:\n",
-    "        pad_length = window_size * window_size * (len(flat_coeffs) // (window_size * window_size) + 1) - len(flat_coeffs)\n",
-    "        flat_coeffs = np.pad(flat_coeffs, (0, pad_length), mode='constant')\n",
-    "    \n",
-    "    # Reshape into 2D\n",
-    "    num_windows = len(flat_coeffs) // (window_size * window_size)\n",
-    "    reshaped = flat_coeffs.reshape(num_windows, window_size, window_size)\n",
-    "    \n",
-    "    # Flatten each window\n",
-    "    return reshaped.reshape(num_windows, -1).tolist()\n",
-    "'''"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def calculate_max_mz(df, spectrum_column='spectrum'):\n",
-    "    def get_max_mz(spectrum_string):\n",
-    "        spectrum = ast.literal_eval(spectrum_string)\n",
-    "        return max(peak[0] for peak in spectrum)\n",
-    "\n",
-    "    max_mz_series = df[spectrum_column].apply(get_max_mz)\n",
-    "    return int(np.ceil(max_mz_series.max()))\n",
-    "\n",
-    "def bin_spectrum(spectrum_string, max_mz):\n",
-    "    spectrum = ast.literal_eval(spectrum_string)\n",
-    "    binned = np.zeros(max_mz + 1)  # +1 to include the max_mz value\n",
-    "    \n",
-    "    for mz, intensity in spectrum:\n",
-    "        mz_int = int(np.round(mz))\n",
-    "        if mz_int <= max_mz:\n",
-    "            binned[mz_int] += intensity\n",
-    "    \n",
-    "    return binned\n",
-    "\n",
-    "def variable_density_bin_spectrum(spectrum_string, max_mz):\n",
-    "    spectrum = ast.literal_eval(spectrum_string)\n",
-    "    binned = np.zeros(max_mz+1)\n",
-    "    for mz, intensity in spectrum:\n",
-    "        continue\n",
-    "    pass\n",
-    "\n",
-    "def tokenize_spectrum(spectrum, method, max_mz, window_size=16):\n",
-    "    if isinstance(spectrum, str):\n",
-    "        binned_spectrum = bin_spectrum(spectrum, max_mz)\n",
-    "    else:\n",
-    "        binned_spectrum = spectrum\n",
-    "\n",
-    "    if method == 'direct':\n",
-    "        return direct_tokenization(binned_spectrum, window_size)\n",
-    "    elif method == 'peak':\n",
-    "        return peak_tokenization(spectrum)\n",
-    "    elif method == 'fourier2':\n",
-    "        return fourier_tokenization_2d(binned_spectrum, window_size)\n",
-    "    elif method == 'wavelet2':\n",
-    "        return wavelet_tokenization_2d(binned_spectrum, window_size)\n",
-    "    else:\n",
-    "        raise ValueError(f\"Unknown tokenization method: {method}\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
    "outputs": [
@@ -311,30 +148,6 @@
     }
    ],
    "source": [
-    "def visualize_tokenization(spectrum, method, max_mz, window_size=16):\n",
-    "    tokenized = tokenize_spectrum(spectrum, method, max_mz, window_size)\n",
-    "    \n",
-    "    plt.figure(figsize=(12, 6))\n",
-    "    \n",
-    "    if method == 'peak':\n",
-    "        plt.scatter(tokenized[:, 0], tokenized[:, 1])\n",
-    "        plt.xlabel('m/z')\n",
-    "        plt.ylabel('Intensity')\n",
-    "        plt.title(f'Peak Tokenization (Top {tokenized.shape[0]} peaks)')\n",
-    "    else:\n",
-    "        plt.imshow(tokenized, aspect='auto', interpolation='nearest')\n",
-    "        plt.colorbar(label='Intensity')\n",
-    "        plt.xlabel('Feature')\n",
-    "        plt.ylabel('Token')\n",
-    "        plt.title(f'{method.capitalize()} Tokenization')\n",
-    "    \n",
-    "    plt.tight_layout()\n",
-    "    plt.show()\n",
-    "\n",
-    "# Function to get a sample spectrum\n",
-    "def get_sample_spectrum(df):\n",
-    "    return df['spectrum'].iloc[0]\n",
-    "\n",
     "# Visualize each method\n",
     "max_mz = calculate_max_mz(df)\n",
     "sample_spectrum = get_sample_spectrum(df)\n",
@@ -361,29 +174,6 @@
    "source": [
     "for method in ['direct', 'peak', 'fourier2', 'wavelet2']:\n",
     "    print(tokenize_spectrum(sample_spectrum, method, max_mz, 16).shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class SpectralDataset(Dataset):\n",
-    "    def __init__(self, df, labels, tokenization_method, max_mz):\n",
-    "        self.spectra = df['spectrum']\n",
-    "        self.labels = labels\n",
-    "        self.tokenization_method = tokenization_method\n",
-    "        self.max_mz = max_mz\n",
-    "\n",
-    "    def __len__(self):\n",
-    "        return len(self.spectra)\n",
-    "\n",
-    "    def __getitem__(self, idx):\n",
-    "        spectrum = self.spectra.iloc[idx]\n",
-    "        label = self.labels[idx]\n",
-    "        tokenized = tokenize_spectrum(spectrum, self.tokenization_method, self.max_mz)\n",
-    "        return torch.tensor(tokenized, dtype=torch.float32).unsqueeze(0), label  # Add an extra dimension"
    ]
   },
   {
@@ -416,146 +206,6 @@
     "X_test = df\n",
     "y_train = y\n",
     "y_test = y"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def load_tokenized_data(method, batch_size=32):\n",
-    "    train_dataset = SpectralDataset(X_train, y_train, method, max_mz)\n",
-    "    test_dataset = SpectralDataset(X_test, y_test, method, max_mz)\n",
-    "    \n",
-    "    train_loader = DataLoader(train_dataset, batch_size=batch_size, shuffle=True)\n",
-    "    test_loader = DataLoader(test_dataset, batch_size=batch_size, shuffle=False)\n",
-    "    \n",
-    "    return train_loader, test_loader"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import torch\n",
-    "import torch.nn as nn\n",
-    "import math\n",
-    "\n",
-    "class PositionalEncoding(nn.Module):\n",
-    "    def __init__(self, d_model, max_len=5000):\n",
-    "        super().__init__()\n",
-    "        position = torch.arange(max_len).unsqueeze(1)\n",
-    "        div_term = torch.exp(torch.arange(0, d_model, 2) * (-math.log(10000.0) / d_model))\n",
-    "        pe = torch.zeros(max_len, 1, d_model)\n",
-    "        pe[:, 0, 0::2] = torch.sin(position * div_term)\n",
-    "        pe[:, 0, 1::2] = torch.cos(position * div_term)\n",
-    "        self.register_buffer('pe', pe)\n",
-    "\n",
-    "    def forward(self, x):\n",
-    "        return x + self.pe[:x.size(0)]\n",
-    "\n",
-    "class MS_VIT(nn.Module):\n",
-    "    def __init__(self, num_classes, embed_depth=16, d_model=256, nhead=8, num_layers=6, dim_feedforward=2048, dropout=0.1):\n",
-    "        super().__init__()\n",
-    "        self.d_model = d_model\n",
-    "        # Initial embedding layer\n",
-    "        self.embedding = nn.Linear(embed_depth, d_model)\n",
-    "        # Positional encoding\n",
-    "        self.pos_encoder = PositionalEncoding(d_model)\n",
-    "        # Transformer encoder\n",
-    "        encoder_layers = nn.TransformerEncoderLayer(d_model, nhead, dim_feedforward, dropout)\n",
-    "        self.transformer_encoder = nn.TransformerEncoder(encoder_layers, num_layers)\n",
-    "        # Final classification layer\n",
-    "        self.fc = nn.Linear(d_model, num_classes)\n",
-    "        \n",
-    "        self.init_weights()\n",
-    "\n",
-    "    def init_weights(self):\n",
-    "        initrange = 0.1\n",
-    "        self.embedding.weight.data.uniform_(-initrange, initrange)\n",
-    "        self.fc.bias.data.zero_()\n",
-    "        self.fc.weight.data.uniform_(-initrange, initrange)\n",
-    "\n",
-    "    def forward(self, src):\n",
-    "        # src shape: (batch_size, seq_length, 16)\n",
-    "        # Embed the input\n",
-    "        src = self.embedding(src) * math.sqrt(self.d_model)\n",
-    "        # Add positional encoding\n",
-    "        src = self.pos_encoder(src.transpose(0, 1))\n",
-    "        # Pass through transformer encoder\n",
-    "        output = self.transformer_encoder(src)\n",
-    "        # Global average pooling\n",
-    "        output = output.mean(dim=0)\n",
-    "        # Classification\n",
-    "        output = self.fc(output)\n",
-    "        \n",
-    "        return output\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def train_model(model, train_loader, test_loader, optimizer, criterion, num_epochs=50):\n",
-    "    device = next(model.parameters()).device\n",
-    "    \n",
-    "    for epoch in range(num_epochs):\n",
-    "        model.train()\n",
-    "        total_loss = 0\n",
-    "        \n",
-    "        # progress bar\n",
-    "        train_pbar = tqdm(train_loader, desc=f'Epoch {epoch+1}/{num_epochs} [Train]', leave=False)\n",
-    "    \n",
-    "        for x_batch, y_batch in train_loader:\n",
-    "            x_batch, y_batch = x_batch.to(device), y_batch.to(device)\n",
-    "            \n",
-    "            # Reshape input: (batch_size, 1, seq_length, 16) -> (batch_size, seq_length, 16)\n",
-    "            x_batch = x_batch.squeeze(1)\n",
-    "            \n",
-    "            optimizer.zero_grad()\n",
-    "            outputs = model(x_batch)\n",
-    "            loss = criterion(outputs, y_batch)\n",
-    "            loss.backward()\n",
-    "            optimizer.step()\n",
-    "            \n",
-    "            total_loss += loss.item()\n",
-    "\n",
-    "            # Update progress bar description with current loss\n",
-    "            train_pbar.update(1)\n",
-    "            train_pbar.set_postfix({'loss': f'{loss.item():.4f}'})\n",
-    "        '''\n",
-    "        # Evaluate on test set\n",
-    "        model.eval()\n",
-    "        correct = 0\n",
-    "        total = 0\n",
-    "\n",
-    "        # Create progress bar for evaluation\n",
-    "        test_pbar = tqdm(test_loader, desc=f'Epoch {epoch+1}/{num_epochs} [Test]', leave=False)\n",
-    "        \n",
-    "        with torch.no_grad():\n",
-    "            for x_batch, y_batch in test_loader:\n",
-    "                x_batch, y_batch = x_batch.to(device), y_batch.to(device)\n",
-    "                x_batch = x_batch.squeeze(1)\n",
-    "                outputs = model(x_batch)\n",
-    "                _, predicted = torch.max(outputs.data, 1)\n",
-    "                total += y_batch.size(0)\n",
-    "                correct += (predicted == y_batch).sum().item()\n",
-    "\n",
-    "                # Update progress bar description with current accuracy\n",
-    "                accuracy = correct / total\n",
-    "                test_pbar.update(1)\n",
-    "                test_pbar.set_postfix({'accuracy': f'{accuracy:.4f}'})\n",
-    "        \n",
-    "        accuracy = correct / total\n",
-    "        print(f'Epoch {epoch+1}/{num_epochs}, Loss: {total_loss/len(train_loader):.4f}, Accuracy: {accuracy:.4f}')\n",
-    "        '''\n",
-    "        print(f'Epoch {epoch+1}/{num_epochs}, Loss: {total_loss/len(train_loader):.4f}')\n",
-    "    return model"
    ]
   },
   {
