--- a/ms_transformer_exploration.ipynb
+++ b/ms_transformer_exploration.ipynb
@@ -6,12 +6,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ms_data_funcs import *\n",
-    "from transformer_funcs import *\n",
-    "\n",
     "import torch\n",
+    "from torch import nn, optim\n",
     "import pandas as pd\n",
-    "from sklearn.preprocessing import LabelEncoder"
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "\n",
+    "from transformer.ms_data_funcs import calculate_max_mz\n",
+    "from transformer.transformer_utils import load_tokenized_data\n",
+    "from transformer.classifier import MS_VIT, train_model"
    ]
   },
   {
