--- a/plot_ftir.ipynb
+++ b/plot_ftir.ipynb
@@ -9,10 +9,8 @@
     "import readspc\n",
     "import os\n",
     "from glob import glob\n",
-    "import numpy as np\n",
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "import struct"
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
