--- a/MoNA_processed_exploration.ipynb
+++ b/MoNA_processed_exploration.ipynb
@@ -15,7 +15,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "#from MoNA_reader import process_json_file\n",
-    "from MoNA_reader_test import *#process_json_file as process_json_file_test, read_line\n",
+    "from MoNA_reader import *#process_json_file as process_json_file_test, read_line\n",
     "from spectra_plotting import *"
    ]
   },
@@ -45,16 +45,7 @@
     }
    ],
    "source": [
-    "'''\n",
-    "df = None\n",
-    "for i in range(1,9):\n",
-    "    if i == 1:\n",
-    "        df = pd.read_csv(csv_pth + \"in-silico1.csv\")\n",
-    "    else:\n",
-    "        df = pd.concat([df,pd.read_csv(csv_pth + \"in-silico\"+str(i)+\".csv\")])\n",
-    "df.reset_index(inplace=True, drop=True)\n",
-    "df.to_csv(csv_pth + \"in-silico.csv\")\n",
-    "'''\n",
+    "\n",
     "df = pd.read_csv('data/MoNA/in-silico.csv') \n",
     "df2 = pd.read_csv('data/GNPS/ALL_GNPS_cleaned.csv')"
    ]
@@ -1062,27 +1053,6 @@
    ],
    "source": [
     "df.spectrum[0].strip()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "list indices must be integers or slices, not tuple",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[49], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;43meval\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mdf\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mspectrum\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\u001b[43m[\u001b[49m\u001b[43m:\u001b[49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\n",
-      "\u001b[0;31mTypeError\u001b[0m: list indices must be integers or slices, not tuple"
-     ]
-    }
-   ],
-   "source": [
-    "eval(df.spectrum[0])[:,0]"
    ]
   },
   {
